Bug 76361 - LO crash: LO crashes while saving the document to docx.
Summary: LO crash: LO crashes while saving the document to docx.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium major
Assignee: Rajashri
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-19 14:43 UTC by Rajashri
Modified: 2014-03-24 10:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original FIle (36.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-19 14:43 UTC, Rajashri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-03-19 14:43:22 UTC
Created attachment 96050 [details]
Original FIle

Nested Table is being created when there is no Nesting.
Which in turns leads to Tag mismatch as the outer table is not closed.
Comment 1 Commit Notification 2014-03-21 17:28:08 UTC
Rajashri committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ff0e274bb146bbaede31e9e349cba301137d4f2

fdo#76361 : LO crash: LO crashes while saving the document to docx



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Jorendc 2014-03-24 10:59:47 UTC
No crash, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: aeab0183e86fe011d32058864c02b2de4da32dc9
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-24_05:49:57

Kind regards,
Joren